# SecureNoteFS

./: .gitignore  CMakeLists.txt  README.md  learning_notes.md  system_design.md
extras/: example_hello.c  install_path.txt  passthrough.c
include/: place_holder.md
src/: crypto.cpp  fs.cpp  fs.hpp  key_manager.cpp  main.cpp  tar_manager.cpp  utils.cpp
